修改版本为2.5.4